--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.0
   provider: ^5.0.0
+  image_picker: ^0.8.3
 
 dev_dependencies:
   flutter_test:
