--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   provider: ^5.0.0
   image_picker: ^0.8.3
   video_player: ^2.1.12
+  event_bus: ^2.0.0
 
 dev_dependencies:
   flutter_test:
